# RustEsMeFavorito

Rust/GenericAndTrait/: Cargo.toml
Rust/GenericAndTrait/src/: main.rs
Rust/Iter/: Cargo.toml
Rust/Iter/src/: main.rs
Rust/RustColletion/: Cargo.toml
Rust/RustColletion/src/: main.rs
Rust/hello_rust/src/: main.rs
Rust/learn_errorControll/: Cargo.toml
Rust/learn_errorControll/src/: main.rs
Rust/learn_rust/src/: main.rs
Rust/learn_struct/src/: main.rs
new-Rust-2025-03-28/collections_04/src/: main.rs
new-Rust-2025-03-28/control_flow_and_ownership_02/: Cargo.toml
new-Rust-2025-03-28/control_flow_and_ownership_02/src/: main.rs
new-Rust-2025-03-28/dummy_package_for_check_crate/: Cargo.toml
new-Rust-2025-03-28/dummy_package_for_check_crate/src/: lib.rs  task.rs  test_module3.rs
new-Rust-2025-03-28/error_handling_and_modules_05/: Cargo.toml
new-Rust-2025-03-28/error_handling_and_modules_05/src/: main.rs  new_module.rs  test_crate.rs  test_module2.rs
new-Rust-2025-03-28/memory_management_07/: Cargo.toml
new-Rust-2025-03-28/project01/: Cargo.toml
new-Rust-2025-03-28/setup_and_basics_01/: Cargo.toml
new-Rust-2025-03-28/structs_enums_patterns_03/: Cargo.toml
new-Rust-2025-03-28/traits_and_generics_06/: Cargo.toml
toy_project/backend/: .env  .erd  Cargo.toml
toy_project/frontend/: package-lock.json  package.json
web/connect_db/: .env  Cargo.toml
web/extention_route/: Cargo.toml
web/req_res/: Cargo.toml
web/simple_rest_api/: Cargo.toml
web/use_middleware_web_server/: Cargo.toml
web/web_server_basics/: Cargo.toml
(+18 files in other folders)
